[package]

name = "img_hash"
version = "3.2.0"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A simple library that provides perceptual hashing and difference calculation for images."

license = "MIT OR Apache-2.0"

documentation = "http://docs.rs/img_hash"

keywords = ["image", "hash", "perceptual", "difference"]

repository = "http://github.com/abonander/img_hash"

edition = "2015"

readme = "README.md"

[features]
nightly = []

[dependencies]
base64 = "*"
image = { version = "*", default-features = false }
rustdct = "*"
serde = { version = "1.0", features = ["derive"] }
transpose = "0.2"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "byte_to_float"
harness = false

[[bin]]
name = "hash_image"
